Made projects page responsive

--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
                 experience is to create front end projects and Unleashing the Power of Imagination through Seamless,
                 Sensational, and User-Centric Web Experiences!</p>
         </div>
-    </section>
+    </section> 
 
     <!-- Portfolio Heading  -->
     <div class="main-heading">
@@ -87,22 +87,22 @@
                     title="Click here to explore The Amazon Clone">
                     <h2>The Amazon Clone</h2>
                 </a>
-                <h4>
+                <h5>
                     A fully functional Amazon clone built with <span>React</span>, <span>Tailwind
                         CSS</span>,<span> Redux Toolkit</span>, <span>Firebase</span>, Framer Motion and more!
-                </h4>
+                </h5>
                 <ul>
                     <li>Product Listings, Product Search and Product Details.</li>
-                    <li>User Registration and Login.</li>
-                    <li>Add, Delete and Edit Cart.</li>
                     <li>Filter based on Rating, Price and Category.</li>
                     <li>Sort based on High Price, Low Price and Rating.</li>
+                    <li>Add, Delete and Edit Cart.</li>
+                    <li>User Registration and Login.</li>
                     <li>Order History, Cancel and Return Order.</li>
                     <li>Save Multiple Addresses.</li>
                 </ul>
             </div>
         </div>
-        
+
         <div class="portfolio-details-container">
             <div class="portfolio-image">
                 <a href="https://netflix-clone-five-neon.vercel.app/" target="_blank">
@@ -111,30 +111,30 @@
             </div>
             <div class="portfolio-details">
                 <h2>Netflix Clone</h2>
-                <h4>
+                <h5>
                     A fully functional Netflix Clone Web application developed using
                     <span>TMDB API</span>, <span>JavaScript</span>, <span>HTML</span> and <span>CSS</span>.
-                </h4>
+                </h5>
                 <ul>
                     <li>
-                        Search for movies and TV shows.
+                        Navbar with search option and WatchList button.
                     </li>
                     <li>
-                        View movie and TV show details.
+                        Random movies in the home page when refresh.
                     </li>
                     <li>
-                        Favorite Movies Page.
+                        SlideShow of movies based on Genre.
                     </li>
                     <li>
-                        Add movies and TV shows to Favorites.
+                        WatchList with data persistant.
                     </li>
                     <li>
-                        Remove movies and TV shows from Favorites.
+                        Add and Remove movies and tv shows from Watchlist.
                     </li>
                 </ul>
             </div>
         </div>
-        
+
         <div class="portfolio-details-container">
             <div class="portfolio-image">
                 <a href="https://e-commerce-kumardinesh1908.vercel.app/" target="_blank"
@@ -147,18 +147,17 @@
                     title="Click here to visit the E-Commerce website">
                     <h2>E-commerce</h2>
                 </a>
-                <h4>
+                <h5>
                     E-commerce web application built with <span>React</span>, <span>Tailwind CSS</span>,
                     <span>Rest APIs</span> and <span>Local Storage</span>.
-                </h4>
+                </h5>
                 <ul>
-                    <li>Browse a list of products.</li>
-                    <li>View detailed product information.</li>
-                    <li>Add products to the shopping cart.</li>
-                    <li>Edit product information.</li>
+                    <li>Extensive catalog of products.</li>
+                    <li>Sort products by price for both ascending and descending order.</li>
+                    <li>Product details, including descriptions, images, and pricing.</li>
+                    <li>Contribute to the product inventory by adding new items.</li>
+                    <li>Modify existing product details, including titles, prices, descriptions, and ratings.</li>
                     <li>Manage and update the shopping cart.</li>
-                    <li>Checkout and complete the purchase.</li>
-                    <li>Error handling for various scenarios.</li>
                 </ul>
             </div>
         </div>
@@ -175,10 +174,10 @@
                     title="Click here to use the Todo List App">
                     <h2>ToDo List</h2>
                 </a>
-                <h4>
-                    A ToDO Liat web application implemented using <span>JavaScript</span>, <span>HTML</span> and
+                <h5>
+                    A Todo List web application implemented using <span>JavaScript</span>, <span>HTML</span> and
                     <span>CSS</span>.
-                </h4>
+                </h5>
                 <ul>
                     <li>Add tasks to the list.</li>
                     <li>Mark tasks as completed.</li>
@@ -203,22 +202,25 @@
                     title="Click here to check the Weather App">
                     <h2>The Weather App</h2>
                 </a>
-                <h4>
+                <h5>
                     Developed a real-time weather web application using <span>HTML</span>, <span>CSS</span> and
                     <span>JavaScript</span>.
-                </h4>
+                </h5>
                 <ul>
                     <li>
-                        Displays weather conditions.
+                        Use geolocation to get the weather information for the user's current location.
                     </li>
                     <li>
-                        Find weather by city name.
+                        Get current weather information for a specific location.
                     </li>
                     <li>
-                        Fetches weather by location.
+                        Display temperature, city name, humidity, and wind speed.
                     </li>
                     <li>
-                        User-friendly errors.
+                        Show weather icons based on the weather condition (e.g., cloudy, clear, rainy).
+                    </li>
+                    <li>
+                        Handle errors gracefully, such as city not found or geolocation not supported.
                     </li>
                 </ul>
             </div>
@@ -236,18 +238,15 @@
                     title="Click here to use the Calculator">
                     <h2>Calculator</h2>
                 </a>
-                <h4>
-                    Implemented using <span>JavaScript</span>, <span>HTML</span> and <span>CSS</span>.
-                </h4>
+                <h5>
+                    Interactive calculator web application created  using <span>JavaScript</span>, <span>HTML</span> and <span>CSS</span> for performing basic arithmetic operations.
+                </h5>
                 <ul>
-                    <li> Addition (+)</li>
-                    <li>Subtraction (-)</li>
-                    <li>Multiplication (*)</li>
-                    <li>Division (/)</li>
-                    <li>Percentage (%)</li>
+                    <li> Addition (+) and Subtraction (-)</li>
+                    <li>Multiplication (*) and Division (/)</li>
+                    <li>Percentage (%) and Decimal Point (.)</li>
                     <li>Sign Change (+/-)</li>
                     <li>Clear All (AC)</li>
-                    <li>Decimal Point (.)</li>
                 </ul>
             </div>
         </div>
@@ -264,24 +263,24 @@
                     title="Click here to play Tic-Tac-Toe">
                     <h2>Tic-Tac-Toe Game</h2>
                 </a>
-                <h4>
-                    Implemented using <span>JavaScript</span>, <span>HTML</span> and <span>CSS</span>.
-                </h4>
+                <h5>
+                    A simple <span>JavaScript</span>, <span>HTML</span> and <span>CSS</span> implementation of the classic Tic-Tac-Toe game.
+                </h5>
                 <ul>
                     <li>
-                        2-player gameplay.
+                        Play Tic-Tac-Toe on a 3x3 grid.
                     </li>
                     <li>
-                        Turn-based gameplay.
+                        Two players take turns placing 'X' and 'O' symbols.
                     </li>
                     <li>
-                        Win condition checking.
+                        The game detects winning combinations.
                     </li>
                     <li>
-                        Draw condition checking.
+                        It handles draws when all cells are filled.
                     </li>
                     <li>
-                        Restart functionality.
+                        Provides a reset option to start a new game.
                     </li>
                 </ul>
             </div>
@@ -299,18 +298,18 @@
                     title="Click here to view the Analog and Digital Clock">
                     <h2>Analog/Digital Clock</h2>
                 </a>
-                <h4>
-                    Developed using <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.
-                </h4>
+                <h5>
+                    A web application that displays both an analog and digital clock. Developed using <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.
+                </h5>
                 <ul>
                     <li>
-                        Dynamic Analog Clock hands Representation.
+                        Displays both analog and digital clocks.
                     </li>
                     <li>
-                        A 12-hour format Digital time display.
+                        The analog clock hands move in real-time to show the current time.
                     </li>
                     <li>
-                        Real-Time Updates.
+                        The digital clock updates in real-time to display the current time in 12-hour format.
                     </li>
                 </ul>
             </div>
