gave margin top to education section  for max-width:640px

--- a/projects.html
+++ b/projects.html
@@ -48,15 +48,15 @@
 
     <!--Header Section-->
     <section class="header">
-        <div class="header-img">
+        <div class="education-img">
             <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
                 type="module"></script>
 
             <dotlottie-player src="https://lottie.host/58835c14-f8f9-4295-93ae-22432b51a28f/g3qDjwm6so.json"
-                background="transparent" speed="1" style="width: 500px; height: 500px;" loop
+                background="transparent" speed="1" class="education-video" loop
                 autoplay></dotlottie-player>
         </div>
-        <div class="quote" style="width:45%; margin-top: 100px;">
+        <div class="quote">
             <p class="education_head">My projects makes use of vast variety of latest technology tools. My best
                 experience is to create front end projects and Unleashing the Power of Imagination through Seamless,
                 Sensational, and User-Centric Web Experiences!</p>
