--- a/skills.html
+++ b/skills.html
@@ -48,12 +48,12 @@
 
     <!--Header Section-->
     <section class="header">
-        <div class="header-img">
+        <div class="skills-img">
             <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs"
                 type="module"></script>
 
             <dotlottie-player src="https://lottie.host/a76d92e4-48fc-4fa5-8b3f-f0d3a07a8521/Q6qfs6AQWi.json"
-                background="transparent" speed="1" style="width: 658px; height: 600px; margin-top: -50px;" loop
+                background="transparent" speed="1" class="skills-video" loop
                 autoplay></dotlottie-player>
         </div>
         <div class="quote">
