Made skills responsive for max-width:400px

--- a/skills.html
+++ b/skills.html
@@ -53,8 +53,7 @@
                 type="module"></script>
 
             <dotlottie-player src="https://lottie.host/a76d92e4-48fc-4fa5-8b3f-f0d3a07a8521/Q6qfs6AQWi.json"
-                background="transparent" speed="1" class="skills-video" loop
-                autoplay></dotlottie-player>
+                background="transparent" speed="1" class="skills-video" loop autoplay></dotlottie-player>
         </div>
         <div class="quote">
             <h2 class="education_head">Technical&nbsp;<span class="edu_background">Skillset</span></h2>
