changed amazon photo

--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,7 @@
             <div class="portfolio-details">
                 <a href="https://amazon-clone-kumardinesh1908.vercel.app/" target="_blank"
                     title="Click here to explore The Amazon Clone">
-                    <h2>The Amazon Clone</h2>
+                    <h2>Amazon Clone</h2>
                 </a>
                 <h5>
                     A fully functional Amazon clone built with <span>React</span>, <span>Tailwind
@@ -105,12 +105,15 @@
 
         <div class="portfolio-details-container">
             <div class="portfolio-image">
-                <a href="https://netflix-clone-five-neon.vercel.app/" target="_blank">
+                <a href="https://netflix-clone-git-master-kumardinesh1908.vercel.app/" target="_blank">
                     <img src="/images/NetFlix Image.png">
                 </a>
             </div>
             <div class="portfolio-details">
-                <h2>Netflix Clone</h2>
+                <a href="https://netflix-clone-git-master-kumardinesh1908.vercel.app/" target="_blank"
+                    title="Click here to explore Netflix Clone">
+                    <h2>Netflix Clone</h2>
+                </a>
                 <h5>
                     A fully functional Netflix Clone Web application developed using
                     <span>TMDB API</span>, <span>JavaScript</span>, <span>HTML</span> and <span>CSS</span>.
