Updated clock link

--- a/projects.html
+++ b/projects.html
@@ -291,13 +291,13 @@
 
         <div class="portfolio-details-container">
             <div class="portfolio-image">
-                <a href="https://kumardinesh1908.github.io/Analog-and-Digital-Clock/" target="_blank"
+                <a href="https://clock-kumardinesh1908.vercel.app/" target="_blank"
                     title="Click here to view the Analog and Digital Clock">
                     <img src="/images/clock.png">
                 </a>
             </div>
             <div class="portfolio-details">
-                <a href="https://kumardinesh1908.github.io/Analog-and-Digital-Clock/" target="_blank"
+                <a href="https://clock-kumardinesh1908.vercel.app/" target="_blank"
                     title="Click here to view the Analog and Digital Clock">
                     <h2>Analog/Digital Clock</h2>
                 </a>
