converted Jquery code into vanilla Javascript

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Title -->
     <title>Dinesh Kumar | Home</title>
@@ -32,6 +31,7 @@
 
     <!-- External JavaScript -->
     <script src="/Scripts/titleChange.js"></script>
+
 </head>
 
 <body class="no-scroll-preload">
@@ -39,6 +39,7 @@
     <!-- loader -->
     <div class="loader-container">
         <div class="atom">
+            <div class="nucleus"></div>
             <div class="electron"></div>
             <div class="electron neutron"></div>
             <div class="electron proton"></div>
@@ -129,7 +130,8 @@
                     </svg>
                 </a>
 
-                <a class="socialicon linkedin" href="https://www.linkedin.com/in/dinesh-kumar-29a310ab/" target="_blank" rel="author">
+                <a class="socialicon linkedin" href="https://www.linkedin.com/in/dinesh-kumar-29a310ab/" target="_blank"
+                    rel="author">
                     <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="35" viewBox="0 0 24 24"
                         fill="#0e76a8" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"
                         class="feather feather-linkedin">
@@ -139,7 +141,8 @@
                     </svg>
                 </a>
 
-                <a class="socialicon instagram" href="https://www.instagram.com/dineshrao1908/" target="_blank" rel="author">
+                <a class="socialicon instagram" href="https://www.instagram.com/dineshrao1908/" target="_blank"
+                    rel="author">
                     <svg class="instagram-icon" x="0px" y="0px" viewBox="0 0 202.5 202.5"
                         style="enable-background:new 0 0 202.5 202.5;">
                         <circle id="littleCircle" class="st0" cx="101" cy="101.5" r="18.9" />
@@ -167,6 +170,7 @@
 
     <!--JavaScript at end of body for optimized loading-->
     <script src="/Scripts/app.js"></script>
+
 
     <!-- Bootstrap Library -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
